# GAI4_course

./: .gitignore  README.md
HW_3/: 00_PrepData.ipynb  01_TrainModel.ipynb  README.md  apply_patches.py  pyproject.toml
Unit_2/: README.md
Unit_5_pix2pixHD/: 01_pix2pixHD_Training.ipynb  pyproject.toml
Unit_6/: 00_PrepData_BBBC039.ipynb  01_UNet_Training.ipynb  02_Evaluate_UNet.ipynb  README.md  pyproject.toml
