[project]
name = "unit-6-segmentation"
version = "0.1.0"
description = "Unit 6: U-Net nuclei segmentation on BBBC039 (fluorescence → mask)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyterlab",
    "dominate",
    "segmentation-models-pytorch>=0.4.0",
    "albumentations>=2.0.0",
    "scikit-image>=0.25.0",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.10.0",
    "numpy>=2.0.0",
    "pillow>=11.0.0",
    "opencv-python>=4.11.0",
    "tqdm>=4.66.0",
    "torch==2.10.0+cu128",
    "torchvision==0.25.0+cu128",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
